--- a/index.html
+++ b/index.html
@@ -20,24 +20,35 @@
             font-family: 'Courier New', Courier, monospace;
             font-weight: 900;
         }
+        @media (max-width: 600px) {
+            .card{
+                width: 100%; 
+                max-width: 350px; 
+            }
+        }
     </style>
 </head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <body style="background-color: #F6F6F2">
-<div class="container">
- <div class="card" style="width: 18rem;margin-left: 500px;margin-top: 200px;padding: 30px;background-color: #6FB3B8;box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;">
-    <div class="card-body text-center">
-    <label for="height" class="text">Enter Your Height: </label>
-    <input type="number" id="height" ><br><br>
-    <label for="weight" class="text">Enter Your Weight: </label>
-    <input type="number" id="weight" ><br><br>
-    <h5 id="result"></h5>
-   <button id="button" onclick="display()"><span style="color:#F6F6F2;font-family:Courier New, Courier, monospace ;font-size: 17px;">submit</span></button>
-  </div>
+
+<div class="container d-flex justify-content-center align-items-center vh-100">
+    <div class="card p-4" style="width: 18rem;background-color: #6FB3B8;box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;">
+        <div class="card-body text-center">
+            <label for="height" class="text">Enter Your Height: </label>
+            <input type="number" id="height" class="form-control mb-3">
+
+            <label for="weight" class="text">Enter Your Weight: </label>
+            <input type="number" id="weight" class="form-control mb-3">
+
+            <h5 id="result"></h5>
+
+            <button id="button" onclick="display()" class="btn mt-2">
+                <span style="color:#F6F6F2;font-family:Courier New, Courier, monospace;font-size: 17px;">Submit</span>
+            </button>
+        </div>
+    </div>
 </div>
-</div>
-</body>
 
 <script>
 const display = () => {
@@ -72,4 +83,5 @@ const display = () => {
     }
 };
 </script>
+</body>
 </html>
