--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ const display = () => {
     let result = document.getElementById('result');
 
     if (!height || !weight || height <= 0 || weight <= 0) {
-        result.innerHTML = "⚠️ Please enter valid height and weight.";
+        result.innerHTML = " Please enter valid height and weight.";
         result.style.color = "black";
         return;
     }
