--- a/index.html
+++ b/index.html
@@ -5,46 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Calculator</title>
     <style>
-        .text{
-            color:rgb(98, 93, 93);
-            font-weight :900;
-            font-size: 17px;
-            font-family:'Courier New', Courier, monospace;
+        .text {
+            color: rgb(98, 93, 93);
+            font-weight: 900;
+            font-size: 21px;
+            font-family: 'Courier New', Courier, monospace;
         }
-        #button{
-            background-color:rgb(98, 93, 93);
+        #button {
+            background-color: rgb(98, 93, 93);
             border-radius: 10px;
             margin-left: 2px;
         }
-        #result{
+        #result {
             font-family: 'Courier New', Courier, monospace;
             font-weight: 900;
         }
         @media (max-width: 600px) {
-            .card{
-                width: 100%; 
-                max-width: 350px; 
+            .card {
+                width: 100%;
+                max-width: 350px;
             }
         }
     </style>
+    <link rel="icon" href="./BMI-Logo.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-
 <body style="background-color: #F6F6F2">
 
-<div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="card p-4" style="width: 18rem;background-color: #6FB3B8;box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;">
+<div class="container d-flex flex-column justify-content-center align-items-center vh-100">
+    
+
+    <h2 class="mb-4 text-center" 
+        style="font-family: 'Courier New', Courier, monospace; font-weight: 900; color: rgb(98, 93, 93);">
+        Body Mass Index (BMI) Calculator
+    </h2>
+
+
+    <div class="card p-4" style="width: 22rem; background-color: #6FB3B8; box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;">
         <div class="card-body text-center">
+            <label for="age" class="text">Enter Your Age: </label>
+            <input type="number" id="age" class="form-control mb-3" placeholder="Age (in years)">
+
             <label for="height" class="text">Enter Your Height: </label>
-            <input type="number" id="height" class="form-control mb-3">
+            <input type="number" id="height" class="form-control mb-3" placeholder="Height (in cm)">
 
             <label for="weight" class="text">Enter Your Weight: </label>
-            <input type="number" id="weight" class="form-control mb-3">
+            <input type="number" id="weight" class="form-control mb-3" placeholder="Weight (in kg)">
 
             <h5 id="result"></h5>
 
             <button id="button" onclick="display()" class="btn mt-2">
-                <span style="color:#F6F6F2;font-family:Courier New, Courier, monospace;font-size: 17px;">Submit</span>
+                <span style="color:#F6F6F2;font-family:'Courier New', Courier, monospace;font-size: 17px;">Submit</span>
             </button>
         </div>
     </div>
@@ -52,12 +63,13 @@
 
 <script>
 const display = () => {
+    let age = document.getElementById('age').value;
     let weight = document.getElementById('weight').value;
     let height = document.getElementById('height').value;
     let result = document.getElementById('result');
 
-    if (!height || !weight || height <= 0 || weight <= 0) {
-        result.innerHTML = " Please enter valid height and weight.";
+    if (!age || !height || !weight || age <= 0 || height <= 0 || weight <= 0) {
+        result.innerHTML = "Please enter valid age, height and weight.";
         result.style.color = "black";
         return;
     }
@@ -68,20 +80,18 @@ const display = () => {
     if (bmi < 18.5) {
         result.innerHTML = `Your BMI is ${bmi} → You are Underweight`;
         result.style.color = "yellow";
-    } 
-    else if (bmi < 25) {
-        result.innerHTML = `Your BMI is ${bmi} → You are Normal weight`;
+    } else if (bmi < 25) {
+        result.innerHTML = `Your BMI is ${bmi} → You’re managing a healthy weight`;
         result.style.color = "green";
-    } 
-    else if (bmi < 30) {
+    } else if (bmi < 30) {
         result.innerHTML = `Your BMI is ${bmi} → You are Overweight`;
         result.style.color = "#C04000";
-    } 
-    else {
-        result.innerHTML = `Your BMI is ${bmi} → You are Obese`;
+    } else {
+        result.innerHTML = `Your BMI is ${bmi} → You have obesity`;
         result.style.color = "red";
     }
 };
 </script>
+
 </body>
 </html>
